log
Wed, Mar 19, 2025  8:33:22 AM: 
 tests:  0|5
total_score: 0/70
3f6cb15
Wed, Mar 19, 2025  9:40:14 AM: 
 exercises.c | 13 ++++++++++++-
 1 file changed, 12 insertions(+), 1 deletion(-)
In file included from test.c:5:0:
exercises.c: In function 'sumaLista':
exercises.c:63:15: error: dereferencing 'void *' pointer [-Werror]
       suma += *(elemento);
               ^~~~~~~~~~~
exercises.c:63:15: error: void value not ignored as it ought to be
cc1.exe: all warnings being treated as errors
Compilation failed
2d2c569
Thu, Mar 20, 2025  4:19:39 PM: 
./test.sh: line 26: gcc: command not found
Compilation failed
b148e48
Thu, Mar 20, 2025  4:19:45 PM: 
./test.sh: line 26: gcc: command not found
Compilation failed
4de4e87
Thu, Mar 20, 2025  4:20:22 PM: 
./test.sh: line 26: gcc: command not found
Compilation failed
5061f2b
Thu, Mar 20, 2025  4:27:40 PM: 
./test.sh: line 26: gcc: command not found
Compilation failed
fce1fc8
Thu, Mar 20, 2025  4:41:40 PM: 
./test.sh: line 26: gcc: command not found
Compilation failed
0a58d2b
Thu, Mar 20, 2025  4:52:51 PM: 
./test.sh: line 26: gcc: command not found
Compilation failed
b7965ea
Thu, Mar 20, 2025  5:02:18 PM: 
In file included from test.c:5:
exercises.c: In function 'sumaLista':
exercises.c:63:15: error: dereferencing 'void *' pointer [-Werror]
   63 |       suma += *(elemento);
      |               ^~~~~~~~~~~
exercises.c:63:15: error: void value not ignored as it ought to be
cc1.exe: all warnings being treated as errors
Compilation failed
f507cdb
Thu, Mar 20, 2025  5:02:45 PM: 
In file included from test.c:5:
exercises.c: In function 'sumaLista':
exercises.c:63:15: error: dereferencing 'void *' pointer [-Werror]
   63 |       suma += *(elemento);
      |               ^~~~~~~~~~~
exercises.c:63:15: error: void value not ignored as it ought to be
cc1.exe: all warnings being treated as errors
Compilation failed
2a61f28
Thu, Mar 20, 2025  5:04:04 PM: 
In file included from test.c:5:
exercises.c: In function 'sumaLista':
exercises.c:63:15: error: dereferencing 'void *' pointer [-Werror]
   63 |       suma += *(elemento);
      |               ^~~~~~~~~~~
exercises.c:63:15: error: void value not ignored as it ought to be
cc1.exe: all warnings being treated as errors
Compilation failed
17157ef
Thu, Mar 20, 2025  5:07:52 PM: 
In file included from test.c:5:
exercises.c: In function 'sumaLista':
exercises.c:63:15: error: dereferencing 'void *' pointer [-Werror]
   63 |       suma += *(elemento);
      |               ^~~~~~~~~~~
exercises.c:63:15: error: void value not ignored as it ought to be
cc1.exe: all warnings being treated as errors
Compilation failed
86a5ee1
Thu, Mar 20, 2025  5:08:24 PM: 
In file included from test.c:5:
exercises.c: In function 'sumaLista':
exercises.c:63:15: error: dereferencing 'void *' pointer [-Werror]
   63 |       suma += *(elemento);
      |               ^~~~~~~~~~~
exercises.c:63:15: error: void value not ignored as it ought to be
cc1.exe: all warnings being treated as errors
Compilation failed
321c77d
Thu, Mar 20, 2025  5:09:24 PM: 
 exercises.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
In file included from test.c:5:
exercises.c: In function 'sumaLista':
exercises.c:64:12: error: assignment to 'int' from 'int *' makes integer from pointer without a cast [-Wint-conversion]
   64 |       suma += (elemento);
      |            ^~
Compilation failed
a26e584
Thu, Mar 20, 2025  5:09:47 PM: 
In file included from test.c:5:
exercises.c: In function 'sumaLista':
exercises.c:64:12: error: assignment to 'int' from 'int *' makes integer from pointer without a cast [-Wint-conversion]
   64 |       suma += (elemento);
      |            ^~
Compilation failed
eb8bafe
Thu, Mar 20, 2025  5:10:40 PM: 
In file included from test.c:5:
exercises.c: In function 'sumaLista':
exercises.c:64:12: error: assignment to 'int' from 'int *' makes integer from pointer without a cast [-Wint-conversion]
   64 |       suma += (elemento);
      |            ^~
Compilation failed
961c61b
Thu, Mar 20, 2025  5:10:48 PM: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
6b3a7aa
Thu, Mar 20, 2025  5:13:43 PM: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
exercises.c: In function 'sumaLista':
exercises.c:64:12: error: assignment to 'int' from 'int *' makes integer from pointer without a cast [-Wint-conversion]
   64 |       suma += (elemento);
      |            ^~
Compilation failed
a155795
Thu, Mar 20, 2025  5:14:05 PM: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
e4e75c1
Thu, Mar 20, 2025  5:20:16 PM: 
 exercises.c | 7 ++++++-
 1 file changed, 6 insertions(+), 1 deletion(-)
In file included from test.c:5:
exercises.c: In function 'eliminaElementos':
exercises.c:84:4: error: expected statement before ']' token
   84 |    ]
      |    ^
Compilation failed
e4f72c2
Thu, Mar 20, 2025  5:20:30 PM: 
 exercises.c | 1 -
 1 file changed, 1 deletion(-)
 tests:  0|0
b0315f8
Thu, Mar 20, 2025  5:26:22 PM: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  3|2
total_score: 40/70
e0555f0
